// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thumbler,  click on no -> thumbler should be in \`no\` state 1`] = `
<div
  className="thumbler"
  onClick={[Function]}
>
  <div
    className="no-btn no"
    onClick={[Function]}
  />
  <div
    className="target no"
  >
    <span>
      Like?
    </span>
  </div>
  <div
    className="yes-btn "
    onClick={[Function]}
  />
</div>
`;

exports[`Thumbler,  click on yes -> thumbler should be in \`yes\` state 1`] = `
<div
  className="thumbler"
  onClick={[Function]}
>
  <div
    className="no-btn "
    onClick={[Function]}
  />
  <div
    className="target yes"
  >
    <span>
      Like?
    </span>
  </div>
  <div
    className="yes-btn yes"
    onClick={[Function]}
  />
</div>
`;

exports[`Thumbler,  default state 1`] = `
<div
  className="thumbler"
  onClick={[Function]}
>
  <div
    className="no-btn "
    onClick={[Function]}
  />
  <div
    className="target default"
  >
    <span>
      Like?
    </span>
  </div>
  <div
    className="yes-btn "
    onClick={[Function]}
  />
</div>
`;
